@@ -72,6 +72,8 @@ dpkg (1.17.11) UNRELEASED; urgency=low
     dpkg-dev and gcc. Closes: #751363
   * Update i386 architecture GNU cpu regex in cputable to match i786 too.
   * Remove unused pkglibdir variable from libdpkg.pc.in.
+  * Perl modules:
+    - Add new set_as_auto() method to Dpkg::Substvars.
 
   [ Updated programs translations ]
   * Danish (Joe Dalton). Closes: #754127
